<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/base_space_2x"
    tools:context="outlook.krasovsky.dima.nanobank.ui.fragment.RoomFragment">

    <Button
        android:id="@+id/private_data"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/base_space_2x"
        android:text="@string/hint_private_data" />

    <Button
        android:id="@+id/current_reauest"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/base_space_2x"
        android:text="@string/hint_current_reauest" />

    <Button
        android:id="@+id/history_credits"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/base_space_2x"
        android:text="@string/hint_history_credits" />

</LinearLayout>
