<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/base_space_2x"
    android:background="@android:color/white"
    tools:context="outlook.krasovsky.dima.nanobank.ui.fragment.CreditCardDataFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/number_card_layout"
        style="@style/TextColorHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_space"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edit_number_card"
            style="@style/TextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_number_card"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/validity_period_card_layout"
        style="@style/TextColorHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_space"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edit_validity_period_card"
            style="@style/TextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_validily_period"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/customer_layout"
        style="@style/TextColorHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_space"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edit_customer"
            style="@style/TextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_customer"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cvv2_layout"
        style="@style/TextColorHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_space"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edit_cvv2"
            style="@style/TextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cvv2"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
