<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="outlook.krasovsky.dima.nanobank.ui.fragment.FeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/base_space">

        <TextView
            android:id="@+id/info_advintages"
            style="@style/Hint_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_space_2x"
            android:gravity="center"
            android:text="@string/text_advintages" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/base_space"
            android:layout_marginTop="@dimen/base_space"
            android:background="@color/colorBtn" />

        <TextView
            android:id="@+id/info_disadvintages"
            style="@style/Hint_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_space_2x"
            android:gravity="center"
            android:text="@string/text_disadvintages" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/base_space"
            android:layout_marginTop="@dimen/base_space"
            android:background="@color/colorBtn" />

        <TextView
            android:id="@+id/info_feedback"
            style="@style/Hint_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/text_feedback" />

    </LinearLayout>

</ScrollView>
