<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="outlook.krasovsky.dima.nanobank.ui.fragment.PrivateDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/base_space_2x">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_layout"
            style="@style/TextColorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_space"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edit_first_name"
                style="@style/TextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/second_name_layout"
            style="@style/TextColorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_space"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edit_second_name"
                style="@style/TextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_second_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/third_name_layout"
            style="@style/TextColorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_space"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edit_third_name"
                style="@style/TextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_third_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/TextColorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_space"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edit_email"
                style="@style/TextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_layout"
            style="@style/TextColorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_space"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edit_phone"
                style="@style/TextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>