<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="outlook.krasovsky.dima.nanobank.ui.activity.SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_above="@+id/btn_sign_up"
        android:gravity="center"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/base_space_2x">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="25dp"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_title" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@android:color/white"
                    app:hintTextAppearance="@style/TextColorHintWhite">

                    <EditText
                        android:id="@+id/edit_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_user"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@android:color/white"
                    app:hintTextAppearance="@style/TextColorHintWhite">

                    <EditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pasword"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/base_space_2x"
                    android:text="@string/btn_sign_in" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#00FFFFFF"
        android:text="@string/btn_sign_up"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSize_label_mini" />

</RelativeLayout>