<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/base_space_2x"
    android:background="@android:color/white"
    tools:context="outlook.krasovsky.dima.nanobank.ui.fragment.AppDataFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_layout"
        style="@style/TextColorHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_space"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edit_login"
            style="@style/TextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/TextColorHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_space"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edit_password"
            style="@style/TextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pasword"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_repeat_layout"
        style="@style/TextColorHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_space"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edit_password_repeat"
            style="@style/TextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pasword_repeat"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
