<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="outlook.krasovsky.dima.nanobank.ui.activity.GetCreditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_send_credit"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/base_space_2x">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_space">

                <TextView
                    android:id="@+id/hint_firstName"
                    style="@style/Hint_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Имя:"
                    android:textSize="@dimen/textSize_label_smal" />

                <TextView
                    android:id="@+id/firstName"
                    style="@style/Value_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/base_space"
                    android:layout_toRightOf="@id/hint_firstName"
                    android:gravity="right"
                    android:textSize="@dimen/textSize_label_smal" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_space">

                <TextView
                    android:id="@+id/hint_lastName"
                    style="@style/Hint_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Фамилия:"
                    android:textSize="@dimen/textSize_label_smal" />

                <TextView
                    android:id="@+id/lastName"
                    style="@style/Value_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/base_space"
                    android:layout_toRightOf="@id/hint_lastName"
                    android:gravity="right"
                    android:textSize="@dimen/textSize_label_smal" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_space">

                <TextView
                    android:id="@+id/hint_patronymic"
                    style="@style/Hint_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Отчество:"
                    android:textSize="@dimen/textSize_label_smal" />

                <TextView
                    android:id="@+id/patronymic"
                    style="@style/Value_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/base_space"
                    android:layout_toRightOf="@id/hint_patronymic"
                    android:gravity="right"
                    android:textSize="@dimen/textSize_label_smal" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_space">

                <TextView
                    android:id="@+id/hint_email"
                    style="@style/Hint_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email:"
                    android:textSize="@dimen/textSize_label_smal" />

                <TextView
                    android:id="@+id/email"
                    style="@style/Value_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/base_space"
                    android:layout_toRightOf="@id/hint_email"
                    android:gravity="right"
                    android:textSize="@dimen/textSize_label_smal" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_space">

                <TextView
                    android:id="@+id/hint_phoneNumber"
                    style="@style/Hint_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Телефон:"
                    android:textSize="@dimen/textSize_label_smal" />

                <TextView
                    android:id="@+id/phoneNumber"
                    style="@style/Value_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/base_space"
                    android:layout_toRightOf="@id/hint_phoneNumber"
                    android:gravity="right"
                    android:textSize="@dimen/textSize_label_smal" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/about_credit_layout"
                style="@style/TextColorHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/et_about_credit"
                    style="@style/TextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_about_credit" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/amount_layout"
                style="@style/TextColorHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_amount"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/distance_layout"
                style="@style/TextColorHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/et_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_distance"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/percent_layout"
                style="@style/TextColorHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/et_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_percent"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_send_credit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/base_space_2x"
        android:text="@string/hint_send_credit" />
</RelativeLayout>
